Fixed grayscale issue on IE
I had issue with images not being greyed-out in IE. The grayscale property does not work on IE. I had to add two separate photos and use the hover option to make the second photo appear. I added all photo in the img folder. Did that for all logos in clients logos and awards section logos

--- a/scss/_awards.scss
+++ b/scss/_awards.scss
@@ -17,16 +17,25 @@
 	max-width: 1000px;
 }
 
+
 .partners-section-item {
 	transform: scale(0.8);
-  filter: grayscale(100%);
 	@media only screen and (min-width: $break-l) {
 		transform: scale(1.1);
 	}
 }
 
+img.colour {
+	display: none;
+}
+
 .partners-section-item:hover {
-		filter: none;
+		img.colour {
+			display: block;
+		}
+		img.grey {
+			display: none;
+		}
 	}
 
 	.google {
@@ -43,12 +52,16 @@
 
 .awards-section-item {
 	transform: scale(0.8);
-  filter: grayscale(100%);
 	@media only screen and (min-width: $break-l) {
 		transform: scale(1.1);
 	}
 }	
 
 .awards-section-item:hover {
-	filter: none;
+	img.colour {
+		display: block;
+	}
+	img.grey {
+		display: none;
+	}
 }
