--- a/scss/_client-logos.scss
+++ b/scss/_client-logos.scss
@@ -1,6 +1,12 @@
 // CLIENT LOGOS
 
+.clients-container {
+	border: 2px rgb(40, 193, 253) solid;
+
+}
+
 .clients {
+	border: 2px red solid;
 	display: none;
 	padding: 2.5rem 18rem;
 	background: linear-gradient(to bottom, #F0F0F0, #FFFFFF);
@@ -12,13 +18,13 @@
 	}
 }
 
+img.colour {
+	display: none;
+}
+
 .client-logo {
 	transform: scale(0.7);
-  filter: grayscale(100%);
-
-	
-	
-
+  //filter: grayscale(100%);
 
 	margin: 0 -10px;
 	@media only screen and (min-width: $break-l) {
@@ -28,8 +34,13 @@
 }
 
 .client-logo:hover {
-	filter: none;
-
+	//filter: none;
+	img.colour {
+		display: block;
+	}
+	img.grey {
+		display: none;
+	}
 
 	.text-holder {
 		visibility: visible;
