--- a/scss/_newsletter.scss
+++ b/scss/_newsletter.scss
@@ -115,8 +115,13 @@ input[type=submit] {
 	font-weight: 600;
 	border-radius: 5px;
 	margin-top: 20px;
-
+	border: none;
 }
+
+input[type=submit]:hover {
+	background-color: darken($color: #333645, $amount: 10%);
+}
+
 
 
 // input[type=text]:focus {
